Update logic for quantization and fixed string errors
- Fixed string errors with cache_volume.
- Editted some debugging with print statements
- Loaded the quantization based on quantization type parameter in config
- Updated the logic to clear VRAM properly

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,5 +5,6 @@ volume_folder: "CHANGE_ME"
 model_name:  "google/medgemma-27b-text-it"
 revision: "6b08c481126ff65a9b8fa5ab4d691b152b8edb5d"
 secret_scope: "CHANGE_ME"
-secret_key: "CHANGE_ME"
+secret_key: "HF_KEY"
 served_model_name: "CHANGE_ME"
+quantization_type: "4bit" #Can be 4bit or 8bit
