--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -7,4 +7,4 @@ revision: "6b08c481126ff65a9b8fa5ab4d691b152b8edb5d"
 secret_scope: "CHANGE_ME"
 secret_key: "HF_KEY"
 served_model_name: "CHANGE_ME"
-quantization_type: "4bit" #Can be 4bit or 8bit
+quantization_type: "None" #Can be None, 4bit or 8bit
