--- a/configs/olmocr_config.yaml
+++ b/configs/olmocr_config.yaml
@@ -1,10 +1,10 @@
-catalog_name: "users"
-schema_name: "will_smith"
-volume_name: "olmocr_weights"
-volume_folder: "olmocr_7B"
+catalog_name: "CHANGE_ME"
+schema_name: "CHANGE_ME"
+volume_name: "CHANGE_ME"
+volume_folder: "CHANGE_ME"
 model_name:  "allenai/olmOCR-7B-0825"
 revision: "e14b3cfbf2f0b85ed95cac9c86017f7abc3e7194"
-secret_scope: "william_smith_secrets"
-secret_key: "HF_KEY"
-served_model_name: "ws_olmOCR-7B"
+secret_scope: "CHANGE_ME"
+secret_key: "CHANGE_ME"
+served_model_name: "CHANGE_ME"
 quantization_type: "None" #Can be None, 4bit, or 8bit
