--- a/vllm_ocr_model_notebooks/requirements.txt
+++ b/vllm_ocr_model_notebooks/requirements.txt
@@ -1,7 +1,7 @@
-transformers==4.55.4
-accelerate==1.10.1
-huggingface_hub==0.34.4
-Pillow==11.3.0
-flask==3.1.2
-bitsandbytes==0.47.0
-pdf2image==1.17.0
+transformers>=4.56.1
+accelerate>=1.10.1
+huggingface_hub>=0.34.4
+Pillow>=11.3.0
+flask>=3.1.2
+bitsandbytes>=0.47.0
+pdf2image>=1.17.0
